--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^4.18.2",
+    "express-session": "^1.18.1",
     "multer": "1.4.5-lts.2"
   }
-} 
+}
