--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.1",
     "multer": "1.4.5-lts.2"
