--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "node-fetch": "^2.6.7",
     "path": "^0.12.7",
     "session-file-store": "^1.5.0"
   },
